GNU diffutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  diff no longer mishandles line numbers exceeding 2**31 on Mingw-w64.


* Noteworthy changes in release 3.5 (2016-08-20) [stable]

** Bug fixes

  diff3 no longer malfunctions due to use-after-free
  [bug introduced in 3.4]

  diff --color no longer colorizes when TERM=dumb


* Noteworthy changes in release 3.4 (2016-08-08) [stable]

** New features

   diff accepts two new options --color and --palette to generate
   and configure colored output.  --color takes an optional argument
   specifying when to colorize a line: --color=always, --color=auto,
   --color=never.  --palette is used to configure which colors are used.

** Bug fixes

  When binary files differ, diff now exits with status 1 as POSIX requires.
  Formerly it exited with status 2.

  Unless the --ignore-file-name-case option is used, diff now
  considers file names to be equal only if they are byte-for-byte
  equivalent.  This fixes a bug where diff in an English locale might
  consider two Asian file names to be the same merely because they
  contain no English characters.

  diff -B no longer generates incorrect output if the two inputs
  each end with a one-byte incomplete line.

  diff --brief no longer reports a difference for unusual identical files.
  For example, when comparing a file like /proc/cmdline (for which the linux
  kernel reports st_size of 0 even though it is not an empty file) to a
  copy of that file's contents residing on a "normal" file system:
    $ f=/proc/cmdline; cp $f k; diff --brief $f k
    Files /proc/cmdline and k differ

** Performance changes

  diff's default algorithm has been adjusted to output higher-quality
  results at somewhat greater computational cost, as CPUs have gotten
  faster since the algorithm was last tweaked in diffutils-2.6 (1993).


* Noteworthy changes in release 3.3 (2013-03-24) [stable]

** New features
